<resources>
    <string name="app_name">Quicky</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cta_onboarding">Call to action button</string>
    <string name="skip_button">Skip</string>
    <string name="regex_patterns">[^a-zA-Z0-9 ]</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="deposit">Deposit</string>
    <string name="amount">00.00</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone number</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="_description">Onboarding images</string>
    <string name="add_product">Add New Products</string>
    <string name="events">Events</string>
    <string name="cakes">Cakes</string>
    <string name="soups">Soups</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="grills">Grills</string>
    <string name="fries">Fries</string>
    <string name="meats">Meats</string>
    <string name="pastries">Pastries</string>
    <string name="breakfast">Breakfast</string>
</resources>