<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainFragment"
        android:title="@string/home"
        android:state_checked="true"
        android:icon="@drawable/ic_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/ordersFragment"
        android:title="@string/orders"
        android:state_checked="false"
        android:icon="@drawable/ic_orders"
        app:showAsAction="never" />

    <item
        android:id="@+id/placeholder"
        android:title=""
        app:showAsAction="never" />

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:state_checked="false"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:state_checked="false"
        android:icon="@drawable/ic_profile"
        app:showAsAction="never" />

</menu>