<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/ordersFragment"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

    <group android:checkableBehavior="single">

        <item android:title="Settings and Privacy">
            <menu>
                <item
                    android:id="@+id/settings"
                    android:title="Settings" />

                <item
                    android:id="@+id/privacy"
                    android:title="Privacy" />

            </menu>

        </item>
    </group>

    <item android:title="Contact Us">
        <menu>
            <item
                android:id="@+id/feedback"
                android:title="Feedback" />
        </menu>
    </item>

</menu>