<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.fragments.registration.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/app_constraint"
            app:layout_constraintEnd_toEndOf="@id/app_constraint"
            app:layout_constraintStart_toStartOf="@id/app_constraint"
            app:layout_constraintTop_toTopOf="@id/app_constraint">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signup_name"
                    style="@style/TextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signup_names"
                        style="@style/Edit_Text_Views"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signup_email"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="@+id/til_signup_name"
                    app:layout_constraintStart_toStartOf="@+id/til_signup_name"
                    app:layout_constraintTop_toBottomOf="@+id/til_signup_name"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signup_email"
                        style="@style/Edit_Text_Views"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signup_phone"
                    style="@style/TextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="@+id/til_signup_email"
                    app:layout_constraintStart_toStartOf="@+id/til_signup_email"
                    app:layout_constraintTop_toBottomOf="@+id/til_signup_email"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signup_phone"
                        style="@style/Edit_Text_Views"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signup_password"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="@+id/til_signup_phone"
                    app:layout_constraintStart_toStartOf="@+id/til_signup_email"
                    app:layout_constraintTop_toBottomOf="@+id/til_signup_phone"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signup_password"
                        style="@style/Edit_Text_Views"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_repeat_password"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    app:layout_constraintEnd_toEndOf="@+id/til_signup_phone"
                    app:layout_constraintStart_toStartOf="@+id/til_signup_phone"
                    app:layout_constraintTop_toBottomOf="@+id/til_signup_password"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_repeat_password"
                        style="@style/Edit_Text_Views"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signup"
                    style="@style/MaterialButton_active"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_sign_up"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="@+id/til_repeat_password"
                    app:layout_constraintStart_toStartOf="@+id/til_repeat_password"
                    app:layout_constraintTop_toBottomOf="@+id/til_repeat_password" />

                <TextView
                    android:id="@+id/tv_signin"
                    style="@style/Text_Views_Titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:text="@string/login"
                    app:drawableEndCompat="@drawable/ic_login_back"
                    app:layout_constraintEnd_toEndOf="@+id/btn_signup"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_already_signed_in"
                    style="@style/Text_Views_Titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_signin"
                    app:layout_constraintStart_toStartOf="@+id/btn_signup"
                    app:layout_constraintTop_toTopOf="@+id/tv_signin" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>