<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.fragments.registration.signin.SigninFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/TextInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                style="@style/Edit_Text_Views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/til_email"
            app:layout_constraintStart_toStartOf="@+id/til_email"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                style="@style/Edit_Text_Views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/MaterialButton_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_login"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <TextView
            android:id="@+id/tv_signup"
            style="@style/Text_Views_Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_admin_back"
            style="@style/Text_Views_Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Go back"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/forgot_password"
            style="@style/Text_Views_Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/forgot_password"
            app:drawableStartCompat="@drawable/ic_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="104dp"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/navigate_to_admin_login"
            style="@style/Text_Views_Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/or"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_gmail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:elevation="1dp"
            android:src="@drawable/ic_google"
            app:layout_constraintEnd_toStartOf="@+id/img_facebook"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/navigate_to_admin_login" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:elevation="1dp"
            android:src="@drawable/ic_fb"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_gmail"
            app:layout_constraintTop_toTopOf="@+id/img_gmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>