<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_nav_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/nav_header_desc"
        android:elevation="1dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_person"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_nav_profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_nav_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="Umurhurhu Darlington Eguonor"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toTopOf="@+id/tv_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/img_nav_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_nav_profile" />

    <TextView
        android:id="@+id/tv_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="Wallet: "
        android:textSize="18sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_nav_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_nav_profile_name" />

    <TextView
        android:id="@+id/tv_wallet_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wallet"
        app:layout_constraintStart_toEndOf="@+id/tv_wallet"
        app:layout_constraintTop_toTopOf="@id/tv_wallet" />

    <TextView
        android:id="@+id/tv_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/deposit"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_wallet" />
</androidx.constraintlayout.widget.ConstraintLayout>